feat(trade): add new prop ticker name for Trade
